# tips

./: README.md
api/: Dockerfile  LICENSE  README.md  pyproject.toml  railway.toml
api/src/: main.py
api/src/api/v1/endpoints/: audio.py
api/src/services/: audio_service.py
api/src/websocket/: audio_socket.py
api/tests/: test_websocket.py
frontend/: package.json  pnpm-lock.yaml
frontend/public/: audio-processor.js
frontend/src/app/: page.tsx
